<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_75sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_weight="1"
        app:srcCompat="@drawable/app_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/allerta_stencil"
        android:textSize="@dimen/_22sdp"
        android:textAlignment="center"
        android:layout_weight="1"
        android:text="@string/app_name" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allerta_stencil"
            android:textSize="@dimen/_16sdp"
            android:textAlignment="textEnd"
            android:paddingEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:text="@string/welcome_user_text" />
        <TextView
            android:id="@+id/userDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/allerta_stencil"
            android:text="USER_NAME"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/signinButton"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_55sdp"
                android:background="@drawable/buttons"
                android:paddingTop="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_80sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/signin_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/allerta_stencil"
                android:textSize="@dimen/_10sdp"
                android:focusable="true" />
            <TextView
                android:id="@+id/signoutButton"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_55sdp"
                android:background="@drawable/buttons"
                android:paddingTop="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_80sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/signout_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/allerta_stencil"
                android:textSize="@dimen/_10sdp"
                android:focusable="true"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/infoButton"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_55sdp"
                android:background="@drawable/buttons"
                android:paddingTop="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/info_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/allerta_stencil"
                android:textSize="@dimen/_10sdp"
                android:focusable="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0">
            <TextView
                android:id="@+id/startGameButton"
                android:layout_width="@dimen/_85sdp"
                android:layout_height="@dimen/_75sdp"
                android:background="@drawable/buttons"
                android:paddingTop="@dimen/_30sdp"
                android:text="@string/start_game_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/allerta_stencil"
                android:textSize="@dimen/_12sdp"
                android:focusable="true" />

            <TextView
                android:id="@+id/settingsButton"
                android:layout_width="@dimen/_85sdp"
                android:layout_height="@dimen/_75sdp"
                android:background="@drawable/buttons"
                android:layout_marginTop="@dimen/_25sdp"
                android:paddingTop="@dimen/_30sdp"
                android:text="@string/settings_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/allerta_stencil"
                android:textSize="@dimen/_12sdp"
                android:focusable="true" />

            <TextView
                android:id="@+id/exitGameButton"
                android:layout_width="@dimen/_85sdp"
                android:layout_height="@dimen/_75sdp"
                android:background="@drawable/buttons"
                android:layout_marginTop="@dimen/_25sdp"
                android:paddingTop="@dimen/_30sdp"
                android:text="@string/exit_game_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/allerta_stencil"
                android:textSize="@dimen/_12sdp"
                android:focusable="true" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/saveloadButton"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_55sdp"
                android:background="@drawable/buttons"
                android:paddingTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:text="@string/save_load_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/allerta_stencil"
                android:textSize="@dimen/_10sdp"
                android:visibility="gone"
                android:focusable="true" />

            <TextView
                android:id="@+id/scoreboardButton"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_55sdp"
                android:background="@drawable/buttons"
                android:paddingTop="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:text="@string/scoreboard_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/allerta_stencil"
                android:textSize="@dimen/_10sdp"
                android:visibility="gone"
                android:focusable="true" />

            <TextView
                android:id="@+id/achievementButton"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_55sdp"
                android:background="@drawable/buttons"
                android:paddingTop="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:text="@string/achievements_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/allerta_stencil"
                android:textSize="@dimen/_10sdp"
                android:visibility="gone"
                android:focusable="true" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>